fix update lesson add content attribute